fix: comment container  no-wrap when comment content overflow

--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -11,6 +11,8 @@
     flex-direction: column;
     gap: 6px;
 
+    overflow-wrap: anywhere;
+
     .comment-detail__author {
       font-size: 0.875rem;
       font-weight: 700;
